# Dual_numbers_C1coursework

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
Notebooks/: Q5_differentiation.ipynb  Q9_CythonVsPython.ipynb  dual_autodiff.ipynb
Notebooks/PythonVsCython_times/: cython_times.pkl  python_times.pkl
docs/: docs_requirments.txt  readme.md
docs/source/: comparison.rst  conf.py  example_notebook.rst  index.rst  modules.rst
dual_autodiff/: __init__.py  dual.py  version.py
dual_autodiff_x/: __init__.py  dual.c  dual.pyx  pyproject.toml  setup.py
dual_autodiff_x/wheelhouse/: dual_autodiff_x-1.1.1-cp310-cp310-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_x-1.1.1-cp311-cp311-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl
tests/: test_arithmetic.py  test_composites.py  test_dual.py  test_functions.py
