#pyproject file adapted from C1 Lecture notes

#defines how to build package
[build-system]
requires = ["setuptools", "wheel", "cython"]  # Build requirements
build-backend = "setuptools.build_meta"


#defines package metadata
[project]
name = "dual_autodiff_x"
description = "A Python package for performing automatic differentiation using dual numbers in cython"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Joshua Roberts", email = "jr992@cam.ac.uk"}]
keywords = ["automatic differentiation", "dual numbers", "scientific computing", "coursework" ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10"
]

version = "1.1.1"


dependencies=[
    "numpy>=2.1.0",
    "pytest>=3.9.0", 
    "pytest-cov==6.0.0"]

[project.urls]
"Documentation"="https://example.com/docs"
"Source"="https://example.com/source"


#[tool.setuptools_scm]
#write_to="dual_autodiff_x/version.py"  # This is for automated versioning


[tool.setuptools.packages.find]
where=["."]


[tool.cibuildwheel]
build = "cp310-* cp311-*"